mirrorx/macos/Runner/mirrorx_core.h

typedef struct AVBuffer AVBuffer;
typedef struct AVCodecDefault AVCodecDefault;
typedef struct AVCodecInternal AVCodecInternal;
typedef struct AVDictionary AVDictionary;
typedef struct MpegEncContext MpegEncContext;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef uint32_t AVOptionType;
typedef struct AVRational {
  int32_t num;
  int32_t den;
} AVRational;
typedef union AVOptionDefaultVal {
  int64_t i64_;
  double dbl;
  const char *str_;
  struct AVRational q;
} AVOptionDefaultVal;
typedef struct AVOption {
  const char *name;
  const char *help;
  int32_t offset;
  AVOptionType type_;
  union AVOptionDefaultVal default_val;
  double min;
  double max;
  int32_t flags;
  const char *unit;
} AVOption;
typedef uint32_t AVClassCategory;
typedef struct AVOptionRange {
  const char *str_;
  double value_min;
  double value_max;
  double component_min;
  double component_max;
  int32_t is_range;
} AVOptionRange;
typedef struct AVOptionRanges {
  struct AVOptionRange **range;
  int32_t nb_ranges;
  int32_t nb_components;
} AVOptionRanges;
typedef struct AVClass {
  const char *class_name;
  const char *(*item_name)(void *ctx);
  const struct AVOption *option;
  int32_t version;
  int32_t log_level_offset_offset;
  int32_t parent_log_context_offset;
  AVClassCategory category;
  AVClassCategory (*get_category)(void *ctx);
  int32_t (*query_ranges)(struct AVOptionRanges**, void *obj, const char *key, int32_t flags);
  void *(*child_next)(void *obj, void *prev);
  struct AVClass *(*child_class_iterate)(void **iter);
} AVClass;
typedef int32_t AVPixelFormat;
typedef uint32_t AVPictureType;
typedef struct AVBufferRef {
  struct AVBuffer *buffer;
  uint8_t *data;
  uintptr_t size;
} AVBufferRef;
typedef uint32_t AVFrameSideDataType;
typedef struct AVFrameSideData {
  AVFrameSideDataType typ;
  uint8_t *data;
  uintptr_t size;
  struct AVDictionary *metadata;
  struct AVBufferRef *buf;
} AVFrameSideData;
typedef uint32_t AVColorRange;
typedef uint32_t AVColorPrimaries;
typedef uint32_t AVColorTransferCharacteristic;
typedef uint32_t AVColorSpace;
typedef uint32_t AVChromaLocation;
typedef struct AVFrame {
  uint8_t *data[AV_NUM_DATA_POINTERS];
  int32_t linesize[AV_NUM_DATA_POINTERS];
  uint8_t **extended_data;
  int32_t width;
  int32_t height;
  int32_t nb_samples;
  AVPixelFormat format;
  int32_t key_frame;
  AVPictureType pict_type;
  struct AVRational sample_aspect_ratio;
  int64_t pts;
  int64_t pkt_pts;
  struct AVRational time_base;
  int32_t coded_picture_number;
  int32_t display_picture_number;
  int32_t quality;
  void *opaque;
  int32_t repeat_pict;
  int32_t interlaced_frame;
  int32_t top_field_first;
  int32_t palette_has_changed;
  int64_t reordered_opaque;
  int32_t sample_rate;
  uint64_t channel_layout;
  struct AVBufferRef *buf[AV_NUM_DATA_POINTERS];
  struct AVBufferRef **extended_buf;
  int32_t nb_extended_buf;
  struct AVFrameSideData **side_data;
  int32_t nb_side_data;
  int32_t flags;
  AVColorRange color_range;
  AVColorPrimaries color_primaries;
  AVColorTransferCharacteristic color_trc;
  AVColorSpace color_space;
  AVChromaLocation chroma_location;
  int64_t best_effort_timestamp;
  int64_t pkt_pos;
  int64_t pkt_duration;
  struct AVDictionary *metadata;
  int32_t decode_error_flags;
  int32_t channels;
  int32_t pkt_size;
  struct AVBufferRef *hw_frames_ctx;
  struct AVBufferRef *opaque_ref;
  uintptr_t crop_top;
  uintptr_t crop_bottom;
  uintptr_t crop_left;
  uintptr_t crop_right;
  struct AVBufferRef *private_ref;
} AVFrame;
typedef void *CMSampleBufferRef;
typedef void *CVImageBufferRef;
typedef CVImageBufferRef CVPixelBufferRef;
extern CVImageBufferRef CMSampleBufferGetImageBuffer(CMSampleBufferRef sample_buffer);
extern uint32_t CVPixelBufferGetPixelFormatType(CVPixelBufferRef pixel_buffer);
extern int32_t CVPixelBufferLockBaseAddress(CVPixelBufferRef pixel_buffer, uint32_t lock_flags);
extern int32_t CVPixelBufferUnlockBaseAddress(CVPixelBufferRef pixel_buffer, uint32_t unlock_flags);
extern size_t CVPixelBufferGetWidth(CVPixelBufferRef pixel_buffer);
extern size_t CVPixelBufferGetHeight(CVPixelBufferRef pixel_buffer);
extern size_t CVPixelBufferGetBytesPerRowOfPlane(CVPixelBufferRef pixel_buffer, size_t planeIndex);
extern void *CVPixelBufferGetBaseAddressOfPlane(CVPixelBufferRef pixel_buffer, size_t planeIndex);
extern uint32_t CVPixelBufferGetHeightOfPlane(CVPixelBufferRef pixel_buffer, uint32_t planeIndex);
extern CVPixelBufferRef CVPixelBufferRetain(CVPixelBufferRef texture);
extern CFTypeRef CVBufferGetAttachment(void *buffer, CFStringRef key, void *attachmentMode);
extern intptr_t NV12ToARGBMatrix(const uint8_t *src_y,
                                 intptr_t src_stride_y,
                                 const uint8_t *src_uv,
                                 intptr_t src_stride_uv,
                                 uint8_t *dst_argb,
                                 intptr_t dst_stride_argb,
                                 const void *yuvconstants,
                                 intptr_t width,
                                 intptr_t height);