mirrorx/lib/env/sdk/mirrorx_core.dart


  late final _CMSampleBufferGetImageBufferPtr =
      _lookup<ffi.NativeFunction<CVImageBufferRef Function(CMSampleBufferRef)>>(
          'CMSampleBufferGetImageBuffer');
  late final _CMSampleBufferGetImageBuffer = _CMSampleBufferGetImageBufferPtr
      .asFunction<CVImageBufferRef Function(CMSampleBufferRef)>();

  int CVPixelBufferGetPixelFormatType(
    CVPixelBufferRef pixel_buffer,
  ) {
    return _CVPixelBufferGetPixelFormatType(
      pixel_buffer,
    );
  }

  late final _CVPixelBufferGetPixelFormatTypePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(CVPixelBufferRef)>>(
          'CVPixelBufferGetPixelFormatType');
  late final _CVPixelBufferGetPixelFormatType =
      _CVPixelBufferGetPixelFormatTypePtr.asFunction<
          int Function(CVPixelBufferRef)>();

  int CVPixelBufferLockBaseAddress(
    CVPixelBufferRef pixel_buffer,
    int lock_flags,
  ) {
    return _CVPixelBufferLockBaseAddress(
      pixel_buffer,
      lock_flags,
    );
  }

  late final _CVPixelBufferLockBaseAddressPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(CVPixelBufferRef, ffi.Uint32)>>(
      'CVPixelBufferLockBaseAddress');
  late final _CVPixelBufferLockBaseAddress = _CVPixelBufferLockBaseAddressPtr
      .asFunction<int Function(CVPixelBufferRef, int)>();

  int CVPixelBufferUnlockBaseAddress(
    CVPixelBufferRef pixel_buffer,
    int unlock_flags,
  ) {
    return _CVPixelBufferUnlockBaseAddress(
      pixel_buffer,
      unlock_flags,
    );
  }

  late final _CVPixelBufferUnlockBaseAddressPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(CVPixelBufferRef, ffi.Uint32)>>(
      'CVPixelBufferUnlockBaseAddress');
  late final _CVPixelBufferUnlockBaseAddress =
      _CVPixelBufferUnlockBaseAddressPtr.asFunction<
          int Function(CVPixelBufferRef, int)>();

  int CVPixelBufferGetWidth(
    CVPixelBufferRef pixel_buffer,
  ) {
    return _CVPixelBufferGetWidth(
      pixel_buffer,
    );
  }

  late final _CVPixelBufferGetWidthPtr =
      _lookup<ffi.NativeFunction<size_t Function(CVPixelBufferRef)>>(
          'CVPixelBufferGetWidth');
  late final _CVPixelBufferGetWidth =
      _CVPixelBufferGetWidthPtr.asFunction<int Function(CVPixelBufferRef)>();

  int CVPixelBufferGetHeight(
    CVPixelBufferRef pixel_buffer,
  ) {
    return _CVPixelBufferGetHeight(
      pixel_buffer,
    );
  }

  late final _CVPixelBufferGetHeightPtr =
      _lookup<ffi.NativeFunction<size_t Function(CVPixelBufferRef)>>(
          'CVPixelBufferGetHeight');
  late final _CVPixelBufferGetHeight =
      _CVPixelBufferGetHeightPtr.asFunction<int Function(CVPixelBufferRef)>();

  int CVPixelBufferGetBytesPerRowOfPlane(
    CVPixelBufferRef pixel_buffer,
    int planeIndex,
  ) {
    return _CVPixelBufferGetBytesPerRowOfPlane(
      pixel_buffer,
      planeIndex,
    );
  }

  late final _CVPixelBufferGetBytesPerRowOfPlanePtr =
      _lookup<ffi.NativeFunction<size_t Function(CVPixelBufferRef, size_t)>>(
          'CVPixelBufferGetBytesPerRowOfPlane');
  late final _CVPixelBufferGetBytesPerRowOfPlane =
      _CVPixelBufferGetBytesPerRowOfPlanePtr.asFunction<
          int Function(CVPixelBufferRef, int)>();

  ffi.Pointer<ffi.Void> CVPixelBufferGetBaseAddressOfPlane(
    CVPixelBufferRef pixel_buffer,
    int planeIndex,
  ) {
    return _CVPixelBufferGetBaseAddressOfPlane(
      pixel_buffer,
      planeIndex,
    );
  }

  late final _CVPixelBufferGetBaseAddressOfPlanePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              CVPixelBufferRef, size_t)>>('CVPixelBufferGetBaseAddressOfPlane');
  late final _CVPixelBufferGetBaseAddressOfPlane =
      _CVPixelBufferGetBaseAddressOfPlanePtr.asFunction<
          ffi.Pointer<ffi.Void> Function(CVPixelBufferRef, int)>();

  int CVPixelBufferGetHeightOfPlane(
    CVPixelBufferRef pixel_buffer,
    int planeIndex,
  ) {
    return _CVPixelBufferGetHeightOfPlane(
      pixel_buffer,
      planeIndex,
    );
  }

  late final _CVPixelBufferGetHeightOfPlanePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              CVPixelBufferRef, ffi.Uint32)>>('CVPixelBufferGetHeightOfPlane');
  late final _CVPixelBufferGetHeightOfPlane = _CVPixelBufferGetHeightOfPlanePtr
      .asFunction<int Function(CVPixelBufferRef, int)>();

  CVPixelBufferRef CVPixelBufferRetain(
    CVPixelBufferRef texture,
  ) {
    return _CVPixelBufferRetain(
      texture,
    );
  }

  late final _CVPixelBufferRetainPtr =
      _lookup<ffi.NativeFunction<CVPixelBufferRef Function(CVPixelBufferRef)>>(
          'CVPixelBufferRetain');
  late final _CVPixelBufferRetain = _CVPixelBufferRetainPtr.asFunction<
      CVPixelBufferRef Function(CVPixelBufferRef)>();

  int CVBufferGetAttachment(
    ffi.Pointer<ffi.Void> buffer,
    int key,
    ffi.Pointer<ffi.Void> attachmentMode,
  ) {
    return _CVBufferGetAttachment(
      buffer,
      key,
      attachmentMode,
    );
  }

  late final _CVBufferGetAttachmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Int32,
              ffi.Pointer<ffi.Void>)>>('CVBufferGetAttachment');
  late final _CVBufferGetAttachment = _CVBufferGetAttachmentPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Void>)>();

  int NV12ToARGBMatrix(
    ffi.Pointer<ffi.Uint8> src_y,
    int src_stride_y,
    ffi.Pointer<ffi.Uint8> src_uv,
    int src_stride_uv,
    ffi.Pointer<ffi.Uint8> dst_argb,
    int dst_stride_argb,
    ffi.Pointer<ffi.Void> yuvconstants,
    int width,
    int height,
  ) {
    return _NV12ToARGBMatrix(
      src_y,
      src_stride_y,
      src_uv,
      src_stride_uv,
      dst_argb,
      dst_stride_argb,
      yuvconstants,
      width,
      height,
    );
  }

  late final _NV12ToARGBMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.IntPtr Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.IntPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.IntPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.IntPtr,
              ffi.Pointer<ffi.Void>,
              ffi.IntPtr,
              ffi.IntPtr)>>('NV12ToARGBMatrix');
  late final _NV12ToARGBMatrix = _NV12ToARGBMatrixPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Void>, int, int)>();
}

class AVBuffer extends ffi.Opaque {}

class AVCodecDefault extends ffi.Opaque {}

class AVCodecInternal extends ffi.Opaque {}

class AVDictionary extends ffi.Opaque {}

class MpegEncContext extends ffi.Opaque {}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class AVRational extends ffi.Struct {
  @ffi.Int32()
  external int num;

  @ffi.Int32()
  external int den;
}

class AVOptionDefaultVal extends ffi.Union {
  @ffi.Int64()
  external int i64_;

  @ffi.Double()
  external double dbl;

  external ffi.Pointer<ffi.Int8> str_;

  external AVRational q;
}

class AVOption extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> name;

  external ffi.Pointer<ffi.Int8> help;

  @ffi.Int32()
  external int offset;

  @AVOptionType()
  external int type_;

  external AVOptionDefaultVal default_val;

  @ffi.Double()
  external double min;

  @ffi.Double()
  external double max;

  @ffi.Int32()
  external int flags;

  external ffi.Pointer<ffi.Int8> unit;
}

typedef AVOptionType = ffi.Uint32;

class AVOptionRange extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> str_;

  @ffi.Double()
  external double value_min;

  @ffi.Double()
  external double value_max;

  @ffi.Double()
  external double component_min;

  @ffi.Double()
  external double component_max;

  @ffi.Int32()
  external int is_range;
}

class AVOptionRanges extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<AVOptionRange>> range;

  @ffi.Int32()
  external int nb_ranges;

  @ffi.Int32()
  external int nb_components;
}

class AVClass extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> class_name;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int8> Function(ffi.Pointer<ffi.Void>)>> item_name;

  external ffi.Pointer<AVOption> option;

  @ffi.Int32()
  external int version;

  @ffi.Int32()
  external int log_level_offset_offset;

  @ffi.Int32()
  external int parent_log_context_offset;

  @AVClassCategory()
  external int category;

  external ffi.Pointer<
          ffi.NativeFunction<AVClassCategory Function(ffi.Pointer<ffi.Void>)>>
      get_category;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Pointer<AVOptionRanges>>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Int8>,
              ffi.Int32)>> query_ranges;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>> child_next;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<AVClass> Function(
              ffi.Pointer<ffi.Pointer<ffi.Void>>)>> child_class_iterate;
}

typedef AVClassCategory = ffi.Uint32;

class AVBufferRef extends ffi.Struct {
  external ffi.Pointer<AVBuffer> buffer;

  external ffi.Pointer<ffi.Uint8> data;

  @uintptr_t()
  external int size;
}

typedef uintptr_t = ffi.Uint64;

class AVFrameSideData extends ffi.Struct {
  @AVFrameSideDataType()
  external int typ;

  external ffi.Pointer<ffi.Uint8> data;

  @uintptr_t()
  external int size;

  external ffi.Pointer<AVDictionary> metadata;

  external ffi.Pointer<AVBufferRef> buf;
}

typedef AVFrameSideDataType = ffi.Uint32;

class AVFrame extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Pointer<ffi.Uint8>> data;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int32> linesize;

  external ffi.Pointer<ffi.Pointer<ffi.Uint8>> extended_data;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int nb_samples;

  @AVPixelFormat()
  external int format;

  @ffi.Int32()
  external int key_frame;

  @AVPictureType()
  external int pict_type;

  external AVRational sample_aspect_ratio;

  @ffi.Int64()
  external int pts;

  @ffi.Int64()
  external int pkt_pts;

  external AVRational time_base;

  @ffi.Int32()
  external int coded_picture_number;

  @ffi.Int32()
  external int display_picture_number;

  @ffi.Int32()
  external int quality;

  external ffi.Pointer<ffi.Void> opaque;

  @ffi.Int32()
  external int repeat_pict;

  @ffi.Int32()
  external int interlaced_frame;

  @ffi.Int32()
  external int top_field_first;

  @ffi.Int32()
  external int palette_has_changed;

  @ffi.Int64()
  external int reordered_opaque;

  @ffi.Int32()
  external int sample_rate;

  @ffi.Uint64()
  external int channel_layout;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Pointer<AVBufferRef>> buf;

  external ffi.Pointer<ffi.Pointer<AVBufferRef>> extended_buf;

  @ffi.Int32()
  external int nb_extended_buf;

  external ffi.Pointer<ffi.Pointer<AVFrameSideData>> side_data;

  @ffi.Int32()
  external int nb_side_data;

  @ffi.Int32()
  external int flags;

  @AVColorRange()
  external int color_range;

  @AVColorPrimaries()
  external int color_primaries;

  @AVColorTransferCharacteristic()
  external int color_trc;

  @AVColorSpace()
  external int color_space;

  @AVChromaLocation()
  external int chroma_location;

  @ffi.Int64()
  external int best_effort_timestamp;

  @ffi.Int64()
  external int pkt_pos;

  @ffi.Int64()
  external int pkt_duration;

  external ffi.Pointer<AVDictionary> metadata;

  @ffi.Int32()
  external int decode_error_flags;

  @ffi.Int32()
  external int channels;

  @ffi.Int32()
  external int pkt_size;

  external ffi.Pointer<AVBufferRef> hw_frames_ctx;

  external ffi.Pointer<AVBufferRef> opaque_ref;

  @uintptr_t()
  external int crop_top;

  @uintptr_t()
  external int crop_bottom;

  @uintptr_t()
  external int crop_left;
